# InfoTheoryInPython

./: .gitignore  README.md  auth.py  main.py  progress_tracker.py  pyproject.toml  replit.nix  requirements.txt  style.css
.github/workflows/: deploy.yml
.streamlit/: config.toml
models/: __init__.py  base.py  progress.py  user.py
pages/: 01_entropy.py  02_mutual_information.py  03_channel_capacity.py
utils/: examples.py  notebook_generator.py  visualizations.py
