[project]
name = "repl-nix-infotheoryinpython"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "matplotlib>=3.9.3",
    "nbformat>=5.10.4",
    "numpy>=2.1.3",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.40.2",
]
