[project]
name = "repl-nix-infotheoryinpython"
version = "0.1.0"
description = "An open-access online book for learning information theory concepts with Python implementations"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8.0",
    "nbformat>=5.10.4",
    "numpy>=1.26.0",
    "plotly>=5.24.1",
    "streamlit>=1.40.2",
    "streamlit-static-render>=0.9.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
